--- a/product/监控与管理/访问控制/用户指南/身份管理/用户管理/通过微信创建子用户.md
+++ b/product/监控与管理/访问控制/用户指南/身份管理/用户管理/通过微信创建子用户.md
@@ -1,5 +1,5 @@
 ## 操作场景
-本文档介绍如何通过微信创建子用户的权限，子用户将在获得的权限范围内管理主账号下的资源。
+本文档介绍如何通过微信创建子用户，子用户将在获得的权限范围内管理主账号下的资源。
 
 ## 操作步骤
 1. 进入	[用户列表-控制台](https://console.cloud.tencent.com/cam)  页面，单击**新建用户**，选择**微信/企业微信导入**>**微信邀请**。
